--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -181,9 +181,36 @@ Also in B cell differentiation, several regions change compartment identity and 
 The dynamics of chromatin architecture were also studied in response to stimuli, such as hormone signaling by progestin or estradiol. Despite large changes in the transcriptional activity, only small changes were observed in the domain organization of chromatin [@LeDily2014]. 
 However, often the entire TAD responded as a unit by changing histone modifications and switching between A and B compartment. This suggests, that transcription status is coordinated within TADs.
 
-## Chromatin organization and evolution
-- Evolution of chromatin architecture
-- Conservation of TADs
+## Evolution of chromatin organization
+
+While TADs were initially described for mammalian genomes, 
+a similar domain organization was found in the genomes of non-mammalian species such as *Drosophila* [@Sexton2012],
+zebrafish [@Gomez-Marin2015] *Caenorhabditis elegans* [@Crane2015] and yeast [@Hsieh2015; @Mizuguchi2014].
+
+However, in *C. elegans* TADs were only observed on the X chromosome of XX hermaphrodites and not on autosomes [@Crane2015]. 
+The small and compact genome with most of the cis-regulatory information within 10kb from the TSS might not need long-range domains for gene regulation [@Long2016].
+In contrast, plants have long-range cell-type specific enhancers [@Zhu2015], but TAD like structures could not be
+observed in Hi-C experiments in *A. thaliana*. 
+Interestingly, both *C.elegans* and *A.thaliana* do not encode a CTCF homolog [@Heger2012], 
+suggesting alternative mechanisms of genome organization and segmentation in these species [@Long2016]. 
+TAD-like structures are therefore not required for eukaryotic interphase chromosome folding. 
+Nevertheless, Hi-C experiments in bacteria and yeast suggest that self-interacting domains may be an ancient feature of chromosome organization. 
+Hi-C data in *Caulobacter* cells revealed so-called chromosomally interacting domains (CIDs) of 30 to 420 kb in size [@Le2013].
+In fission yeast *S. pombe*, globule structures at the 40-100 kb scale were identified and depend on cohesin complex [@Mizuguchi2014]. Furthermore, in very short CIDs of around 2-10 kb were detected in *S.cerevisiae* and bounded by highly transcribed genes [@Hsieh2015].
+Further high-resolution experiments in more diverse species are needed to understand the evolutionary origin of genome segregation into TAD-like structures. 
+
+The presence of domain-like structures in diverse species across the tree of life leads
+to the question if not only the genomic sequence but also its folding structure is conserved between species. 
+Interestingly, TADs are not only largely stable across different cell-types [@Dixon2012; @Rao2014] and during differentiation [@Dixon2015], but also remarkably similar between homologous regions in mouse and human [@Dixon2012]. 
+More than 54% of TAD boundaries in human hESC cells occur at homologous genomic positions in mouse ESCs [@Dixon2012]. Similarly, 45% of contact domains called in mouse B-lymphoblasts were
+also identified at homologous regions in human lymphoblastoid cells
+[@Rao2014]. A single TAD boundary at the Six gene loci could be traced back
+in evolution to the origin of deuterostomes [@Gomez-Marin2015]. However, these
+analyses focused only on the subset of syntenic regions that can be
+mapped uniquely between genomes. 
+Initial comparative Hi-C studies identified several evolutionary breakpoints at
+TAD boundaries and a major role of conserved CTCF binding sites in TAD conservation [@VietriRudan2015]. 
+However, it remains to be investigated systematically if TAD regions as a whole might be stable or disrupted by rearrangements during evolution and how this is associated to conserved or divergent transcriptional regulation. 
 
 ## Disruption of chromatin architecture in disease
 - Disruption of chromatin architecture
