--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ classoption: [
   captions=tableabove, 
   draft=false]
 papersize: a4
-bibliography: [bib/PhDclean.cleaner.bib]
+bibliography: [bib/PhD.bib]
 biblio-style: myabbrvnat
 csl: american-journal-of-medical-genetics.csl
 link-citations: yes
